adding prima and data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
-    },
-    // "editor.fontLigatures": false
-    // "editor.codeActionsOnSave": {
-    
-    // }
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
+  }
+
+  // "editor.fontLigatures": false
+  // "editor.codeActionsOnSave": {
+
+  // }
 }
